--- a/Pages/Shared/_CrudDataTableCustomPartial.cshtml
+++ b/Pages/Shared/_CrudDataTableCustomPartial.cshtml
@@ -1,5 +1,19 @@
 <partial name="_FlashPartial" />
 
+<script>
+    function delete_row(id) {
+        if (confirm("Are you sure?")) {
+            $("#delete_id").val(id);
+            $("#delete_form").submit();
+        }
+    }
+</script>
+
+<form style="display:none" id="delete_form" method="post">
+    <input id="delete_id" name="delete_id" value="-1" />
+    <input name="field" value="@Model.field" />
+</form>
+
 <div class="data_table_div crud_table">
 
     <table class="dt">
@@ -35,6 +49,16 @@
 
                     <td>
                         <a href="Detail?id=@(dr[0])&field=@(Model.field)">Update</a>
+                        @{
+                            int number_of_issues = Convert.ToInt32(dr["Number of Issues"]);
+                            if (number_of_issues == 0)
+                            {
+                                <span>&nbsp; &nbsp;</span>
+                                <a href="#" onclick="delete_row(@dr[0])">
+                                    Delete
+                                </a>
+                            }
+                        }
                     </td>
                 </tr>
             }
