invite user in progress

--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -9,7 +9,7 @@
 }
 
 <div class="just_left">
-    <h1>About Budoco</h1>
+    <h1>@ViewData["Title"]</h1>
     <div><a href="/Index">Back to Budoco Home</a></div>
 </div>
 
