--- a/Pages/AcceptInvite.cshtml
+++ b/Pages/AcceptInvite.cshtml
@@ -3,10 +3,10 @@
     Layout = "_layout_signed_out";
 }
 
-@model ResetPasswordModel
+@model AcceptInviteModel
 
 @{
-    ViewData["Title"] = "Reset Password";
+    ViewData["Title"] = "AcceptInvite";
 }
 
 <h1>@ViewData["Title"]</h1>
