--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -7,7 +7,7 @@
 
 <div class="centered_and_left_just">
     
-<h1>Admin</h1>
+<h1>@ViewData["Title"]</h1>
 <partial name="_FlashPartial" />
 
 <table class="admin_page">
