--- a/Pages/Admin/Logs.cshtml
+++ b/Pages/Admin/Logs.cshtml
@@ -2,10 +2,10 @@
 @model LogsModel
 
 @{
-    ViewData["Title"] = "Admin";
+    ViewData["Title"] = "Logs";
 }
     
-<h1>Logs</h1>
+<h1>@ViewData["Title"]</h1>
 
 <partial name="_FlashPartial" />
 
