--- a/Pages/Admin/Organization.cshtml
+++ b/Pages/Admin/Organization.cshtml
@@ -2,7 +2,7 @@
 @model OrganizationModel
 @using Microsoft.AspNetCore.Http
 @{
-    ViewData["Title"] = "Organziation";
+    ViewData["Title"] = "Organization";
 }
 
 <h1>Create/Update @ViewData["Title"]</h1>
