--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -9,7 +9,7 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>Register</h1>
+<h1>@ViewData["Title"]</h1>
 <partial name="_FlashPartial" />
 
 <div class="form_div">
