--- a/Pages/RegisterConfirmation.cshtml
+++ b/Pages/RegisterConfirmation.cshtml
@@ -9,7 +9,7 @@
     ViewData["Title"] = "Registration Confirmation";
 }
 
-<h1>Register Confirmation</h1>
+<h1>@ViewData["Title"]</h1>
 
 <partial name="_FlashPartial" />
 
