--- a/Pages/ResetPasswordRequest.cshtml
+++ b/Pages/ResetPasswordRequest.cshtml
@@ -9,7 +9,8 @@
     ViewData["Title"] = "Reset Password Request";
 }
 
-<h1>Reset Password Request</h1>
+<h1>@ViewData["Title"]</h1>
+
 <partial name="_FlashPartial" />
 
 
