--- a/Pages/Search.cshtml
+++ b/Pages/Search.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Search Issues";
 }
 
-<h1>Search Issues</h1>
+<h1>@ViewData["Title"]</h1>
 <partial name="_FlashPartial" />
 
 <div class="form_div">
