--- a/Pages/UserSettings.cshtml
+++ b/Pages/UserSettings.cshtml
@@ -2,10 +2,10 @@
 @model UserSettingsModel
 @using Microsoft.AspNetCore.Http
 @{
-    ViewData["Title"] = "User Settings";
+    ViewData["Title"] = "Your User Settings";
 }
 
-<h1>Your User Settings</h1>
+<h1>@ViewData["Title"]</h1>
 
 <partial name="_FlashPartial" />
 
