--- a/Pages/Admin/User.cshtml
+++ b/Pages/Admin/User.cshtml
@@ -60,7 +60,6 @@
     <tr>
         <td colspan="2">
             <div  class="user_page_info_text">
-            UNDER CONSTRUCTION: DO NOT TRUST THIS YET.<br>
             When you assign a user to an organization, then that user can only view and update issues associated with that organization. 
             Budoco automatically modifies your Issue Queries adding a SQL "WHERE" clause that limits the view to issues belonging to the same organization.
             </div>
@@ -75,7 +74,7 @@
     
     
     <tr>
-        <td><button type="submit">Update</button>
+        <td><button type="submit">Save</button>
     <tr>
     </table>
 </form>
