--- a/Pages/Admin/Users.cshtml
+++ b/Pages/Admin/Users.cshtml
@@ -7,7 +7,10 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<div><a href="InviteUser">Invite User</a></div>
+
 <partial name="_CrudDataTablePartial" />
+
 
 @section Scripts {
     
