--- a/Pages/Shared/_CrudDataTableWithDeletePartial.cshtml
+++ b/Pages/Shared/_CrudDataTableWithDeletePartial.cshtml
@@ -11,6 +11,7 @@
 
 <form style="display:none" id="delete_form" method="post">
     <input id="delete_id" name="delete_id" value="-1" />
+    <input name="action" value="delete" />
 </form>
 
 <div class="data_table_div">
