--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -20,7 +20,7 @@
         <a href="https://ctrager.github.io">Corey Trager</a> here, the author of Budoco and BugTracker.NET.
     </p>
     <p>
-        "Budoco" is a rewrite of <b>BU</b>gtracker.NET using Microsoft's <b>DO</b>tnet <b>CO</b>re.
+        "Budoco" is a rewrite of my old <b>BU</b>gtracker.NET using Microsoft's <b>DO</b>tnet <b>CO</b>re.
     </p>
     <p>
         More about Budoco here: <a href="https://github.com/ctrager/budoco">Budoco on GitHub</a>
@@ -30,12 +30,14 @@
     </p>
     <p>
         If Budoco (or BugTracker.NET) is helping you or your organization you in any way,
-        consider encouraging its development by making a small regular donation via <a
-            href="https://www.patreon.com/ctrager">Patreon</a>,
-        or a one-time donation <a href="https://ifdefined.com/donate_to_bugtracker.html">here</a>,
-        or even just tell me about it at ctrager@yahoo.com
+        consider encouraging its development by <a href="https://www.buymeacoffee.com/ctrager">buying me a coffee!</a>
     </p>
 
-
+    <p>
+        Thanks to <a href="https://github.com/ivangrek">Ivan Grek</a> for his code contributions.
+        <br>
+        Thanks to <a href="https://github.com/jstedfast">Jeffrey Stedfast</a> for his <a
+            href="https://github.com/jstedfast/MailKit">Mailkit</a> library
+    </p>
 </div>
 </div>
