--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -11,6 +11,12 @@
 <partial name="_FlashPartial" />
 
 <table class="admin_page">
+
+<tr>
+    <td><a href="/Admin/InviteUser">Invite User</a>
+    <td>Register a new user and mail an invite.
+</tr>
+
 <tr>
     <td><a href="/Admin/Users">Users</a>
     <td>Mark users as admin or not, inactive or not, assign them to organizations.
