--- a/Pages/Admin/InviteUser.cshtml
+++ b/Pages/Admin/InviteUser.cshtml
@@ -23,8 +23,9 @@
         <td colspan="2">
             <div  class="user_page_info_text">
             When you assign a user to an organization, then that user can only view and update issues associated with that organization. 
-            Budoco automatically modifies your Issue Queries adding a SQL "WHERE" clause that limits the view to issues belonging to the same organization.
-            </div>
+            Budoco automatically modifies Issue Queries adding a SQL "WHERE" clause that limits the view to issues belonging to the same organization as the user. 
+            When a user is not assoicated with an organization, then the user can see all issues.
+              </div>
         </td>
     </tr>
     <tr>
