--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -37,7 +37,9 @@
         Thanks to <a href="https://github.com/ivangrek">Ivan Grek</a> for his code contributions.
         <br>
         Thanks to <a href="https://github.com/jstedfast">Jeffrey Stedfast</a> for his <a
-            href="https://github.com/jstedfast/MailKit">Mailkit</a> library
+            href="https://github.com/jstedfast/MailKit">Mailkit</a> library.
+        <br>
+        Thanks to all those who contributed <a href="bugtrackernet_about.html">time and money</a> to BugTracker.NET.
     </p>
 </div>
 </div>
