--- a/Pages/Shared/_IssuePostsPartial.cshtml
+++ b/Pages/Shared/_IssuePostsPartial.cshtml
@@ -53,7 +53,8 @@
                                     if (html_part != "")
                                     {
                                         <!--sandbox prevents script-->
-                                        <iframe sandbox onload="resizeIframe(this)" class="html_part_iframe" src="HtmlPart?p_id=@p_id">
+                                        <iframe sandbox="allow-same-origin" onload="resizeIframe(this)" class="html_part_iframe"
+                                            src="HtmlPart?p_id=@p_id">
                                         </iframe>
                                     }
                                     else
